svg canvas mask

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Path Mask Scroll</title>
+	<title>svg canvas mask</title>
 
-	<script src="/js/jquery-3.4.1.min.js"></script>
-	<script src="/js/dat.gui.min.js"></script>
+	<script src="./js/jquery-3.4.1.min.js"></script>
+	<script src="./js/dat.gui.min.js"></script>
 </head>
 <style>
 html,body {position:relative;width:100%;height:100%;margin:0;padding:0;}
@@ -85,10 +85,10 @@ html,body {position:relative;width:100%;height:100%;margin:0;padding:0;}
 	</div>
 </body>
 <script type="module">
-import { faveScroll } from '/js/pub-scroll.js';
-import { faveResize } from '/js/pub-resize.js';
-import { faveMaskMotion } from '/js/mask-motion.js';
-import { faveSticky } from '/js/pub-sticky.js';
+import { faveScroll } from './js/pub-scroll.js';
+import { faveResize } from './js/pub-resize.js';
+import { faveMaskMotion } from './js/mask-motion.js';
+import { faveSticky } from './js/pub-sticky.js';
 $(function () {
 
 	// gui 제어
