--- a/index.html
+++ b/index.html
@@ -35,9 +35,6 @@ html,body {position:relative;width:100%;height:100%;margin:0;padding:0;}
 						<button class="svg-init">생성</button>
 					</div>
 					<canvas class="svg-motion"></canvas>
-					<video loop muted autoplay>
-						<source src="/assets/videos/test.mp4" type="video/mp4">
-					</video>
 					<div class="svg-wrap x-svg">
 						<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="1000" height="210" viewBox="0 0 1000 210" style="enable-background:new 0 0 1000 210;" xml:space="preserve">
 							<g>
@@ -257,7 +254,7 @@ $(function () {
 
 		svgCanvasMotion = new faveMaskMotion($('.sticky-wrap .svg-motion'), {
 			svgSrc : svgimg,
-			// bgImgSrc : '/assets/images/test.jpg',
+			bgImgSrc : '/images/space.jpg',
 			moveNode : $('.sticky-wrap'),
 			autoPlay : _autoPlay,
 			minScale : _minScale,
