--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ $(function () {
 
 		svgCanvasMotion = new faveMaskMotion($('.sticky-wrap .svg-motion'), {
 			svgSrc : svgimg,
-			bgImgSrc : '/images/space.jpg',
+			bgImgSrc : './images/space.jpg',
 			moveNode : $('.sticky-wrap'),
 			autoPlay : _autoPlay,
 			minScale : _minScale,
