--- a/index.html
+++ b/index.html
@@ -71,7 +71,6 @@ html,body {position:relative;width:100%;height:100%;margin:0;padding:0;}
 									c-3.66,8.96-8.69,16.46-15.09,22.49c-6.4,6.04-13.99,10.56-22.77,13.58C945.66,207,936.06,208.51,925.64,208.51z"/>
 							</g>
 						</svg>
-						<!-- <svg height="1310" viewBox="0 0 1862 1310" width="1862" xmlns="http://www.w3.org/2000/svg"><path d="m1470.11538 663.673077v141.801881h-546.500522l546.500522 460.856112v175.77525l-426.86122-358.93601-651.369545 401.772v-165.43553l553.88567-336.77947-209.738041-177.252352h-344.147629v-141.801881zm-768.197431-838.903846c113.802051 0 209.868718 60.472304 264.55282 148.9683594 50.250261-67.8469757 130.059491-113.5699374 226.126151-113.5699374 171.44205 0 292.63385 131.26914845 292.63385 312.686062 0 176.99211-121.1918 311.211127-292.63385 311.211127-97.54461 0-175.87589-47.197896-226.126151-116.519806-54.684102 87.021121-150.750769 147.493426-264.55282 147.493426-187.699487 0-325.148718-135.693952-325.148718-345.134616 0-210.9155981 137.449231-345.134615 325.148718-345.134615zm-.904705 139.8173075c-107.566401 0-194.503629 82.6307692-194.503629 205.1013735 0 123.946154 86.937228 208.052473 194.503629 208.052473 107.5664 0 195.977141-81.15522 195.977141-205.101374 0-123.9461539-88.410741-208.0524725-195.977141-208.0524725zm491.986756 30.23076919c-96.11413 0-170.04808 70.95486331-170.04808 177.38715831s75.41263 180.343611 170.04808 180.343611 170.04808-70.954863 170.04808-177.387158c0-106.4322954-75.41263-180.34361131-170.04808-180.34361131z" fill-rule="evenodd" transform="matrix(0 -1 1 0 276.144231 1585.855769)"/></svg> -->
 					</div>
 					<div class="svg-wrap y-svg">
 						<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 110 700" width="110" height="700" style="enable-background:new 0 0 110 700;" xml:space="preserve">
@@ -145,7 +144,7 @@ $(function () {
 	_bgColor = '#ffffff',
 	_scrollEase = 0.92,
 	_motionType = 's',
-	_svgSrc = true,
+	_horizontal = true,
 	_startPercent = 0;
 
 	const lightControl = {
@@ -165,11 +164,11 @@ $(function () {
 		bgFadeOut : _bgFadeOut,
 		reverse : _reverse,
 		motionType : _motionType,
-		svgSrc : _svgSrc,
+		horizontal : _horizontal,
 		startPercent : _startPercent
 	}
-	gui.add(lightControl, 'svgSrc').onChange(function (val){
-		_svgSrc = val;
+	gui.add(lightControl, 'horizontal').onChange(function (val){
+		_horizontal = val;
 		motionInit();
 	});
 	gui.add(lightControl, 'minScale', 0, 50).step(0.1).onChange(function (val){
@@ -247,13 +246,13 @@ $(function () {
 		let svgimgVH;
 		let svgNode;
 
-		svgNode = (_svgSrc) ? $('.svg-wrap.x-svg') : $('.svg-wrap.y-svg');
+		svgNode = (_horizontal) ? $('.svg-wrap.x-svg') : $('.svg-wrap.y-svg');
 		svgimg = 'data:image/svg+xml;charset=utf-8,' + encodeURIComponent(svgNode.html());
 		svgimgVW = svgNode.find('svg').attr('width');
 		svgimgVH = svgNode.find('svg').attr('height');
 
 		svgCanvasMotion = new faveMaskMotion($('.sticky-wrap .svg-motion'), {
-			svgSrc : svgimg,
+			horizontal : svgimg,
 			bgImgSrc : './images/space.jpg',
 			moveNode : $('.sticky-wrap'),
 			autoPlay : _autoPlay,
