--- a/svg-path-motion.html
+++ b/svg-path-motion.html
@@ -96,7 +96,7 @@ html,body {position:relative;width:100%;height:100%;margin:0;padding:0;}
 	</div>
 </body>
 <script type="module">
-import { faveScroll } from './js/pub-scroll.mjs';
+import { faveScroll } from './js/pub-scroll.js';
 import { _faveLineMotion } from './js/line-motion.js';
 $(function () {
 	let _scrollEase = 0.95;
