--- a/svg-path-motion.html
+++ b/svg-path-motion.html
@@ -24,6 +24,7 @@ html,body {position:relative;width:100%;height:100%;margin:0;padding:0;}
 .auto-wrap svg path {stroke-width:8px;fill:none;stroke:#2e00a3;}
 .auto-wrap .svg-play {position:relative;z-index:10;}
 .auto-wrap .svg-pause {position:relative;z-index:10;}
+.auto-wrap .svg-reset {position:relative;z-index:10;}
 </style>
 <body>
 	<div id="wrap">
