--- a/pub-drive.html
+++ b/pub-drive.html
@@ -47,7 +47,7 @@ h1 {text-align:center;}
 canvas {display:block;width:100%;height:100%;margin:0 auto;}
 #wrap {position:relative;height:100%;background-color:#000;}
 #wrap > .webgl-wrap {position:relative;display:inline-block;position:relative;width:100%;}
-.goal-txt {position:absolute;top:-20%;left:50%;font-size:200px;color:#6600ff;z-index:1;transform:translate(-50%,-50%) rotate(-45deg);transition:all 1s;}
+.goal-txt {position:absolute;top:-50vh;left:50%;font-size:200px;color:#6600ff;z-index:1;transform:translate(-50%,-50%) rotate(-45deg);transition:all 1s;}
 .goal-txt.on {top:50%;transform:translate(-50%,-50%) rotate(0deg);}
 .level-wrap {position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);}
 .level-wrap > .tit {font-size:100px;color:#e73480;text-align:center;}
