--- a/pub-drive.html
+++ b/pub-drive.html
@@ -3,7 +3,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>car</title>
+	<title>pub drive</title>
 
 	<script src="./js/jquery-3.4.1.min.js"></script>
 	<script src="./js/three/three.min.js"></script>
