--- a/dsmt/index.html
+++ b/dsmt/index.html
@@ -5,18 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <meta name="format-detection" content="telephone=no, address=no, email=no" />
-    <link rel="shortcut icon" href="assets/images/common/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/common/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="192x192" href="assets/images/common/android-icon-192x192.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/common/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/common/favicon-16x16.png" />
+    <link rel="shortcut icon" href="/pubgyu-blog/dsmt/assets/images/common/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/pubgyu-blog/dsmt/assets/images/common/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/pubgyu-blog/dsmt/assets/images/common/android-icon-192x192.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/pubgyu-blog/dsmt/assets/images/common/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/pubgyu-blog/dsmt/assets/images/common/favicon-16x16.png" />
     <title>Kakao Impact</title>
-    <link rel="preload" href="assets/fonts/SDGothicNeoaUniTTF-dRg.woff" as="font" type="font/woff" crossorigin="anonymous" />
-    <link rel="preload" href="assets/fonts/SDGothicNeoaUniTTF-fSb.woff" as="font" type="font/woff" crossorigin="anonymous" />
-    <link rel="preload" href="assets/fonts/SDGothicNeoaUniTTF-hEb.woff" as="font" type="font/woff" crossorigin="anonymous" />
-    <link rel="preload" href="assets/fonts/Sequel100Wide-75.woff" as="font" type="font/woff" crossorigin="anonymous" />
-    <link rel="stylesheet" type="text/css" href="assets/styles/style.css" />
-    <link rel="stylesheet" href="assets/styles/story.css" />
+    <link rel="preload" href="/pubgyu-blog/dsmt/assets/fonts/SDGothicNeoaUniTTF-dRg.woff" as="font" type="font/woff" crossorigin="anonymous" />
+    <link rel="preload" href="/pubgyu-blog/dsmt/assets/fonts/SDGothicNeoaUniTTF-fSb.woff" as="font" type="font/woff" crossorigin="anonymous" />
+    <link rel="preload" href="/pubgyu-blog/dsmt/assets/fonts/SDGothicNeoaUniTTF-hEb.woff" as="font" type="font/woff" crossorigin="anonymous" />
+    <link rel="preload" href="/pubgyu-blog/dsmt/assets/fonts/Sequel100Wide-75.woff" as="font" type="font/woff" crossorigin="anonymous" />
+    <link rel="stylesheet" type="text/css" href="/pubgyu-blog/dsmt/assets/styles/style.css" />
+    <link rel="stylesheet" href="/pubgyu-blog/dsmt/assets/styles/story.css" />
   </head>
   <body>
 
@@ -84,7 +84,7 @@
     <!-- feed 1 -->
     <span class="horizontal-message">
 		<span class="horizontal-con">
-			<img clasassets/images/story/horizontal-message-img.png" alt="">
+			<img class="info-img" src="/pubgyu-blog/dsmt/assets/images/story/horizontal-message-img.png" alt="">
 			<strong class="tit">최적화된 경험을 위해 세로 화면으로 돌려주세요</strong>
 		</span>
     </span>
@@ -105,7 +105,7 @@
         <div id="dsmtContents" class="content">
           <article class="sticky-wrap sticky1 start-show" id="brand-introduction">
             <div id="story-lottie1" class="sticky-con" data-grid="w">
-              <div class="content-wassets/json/story/intro1.jsoassets/json/story/intro1_m.json">
+              <div class="content-wrap" data-lottie="/pubgyu-blog/dsmt/assets/json/story/intro1.json" data-lottie-m="/pubgyu-blog/dsmt/assets/json/story/intro1_m.json">
                 <div class="message-txt aria-hidden" aria-hidden="true">
                   <strong class="tit">
 									<i>당신에게는</i>
@@ -245,7 +245,7 @@
 								</strong>
                 </div>
                 <figure class="ie-content">
-                  <img src="assets/images/story/ie-content1.jpg" alt="">
+                  <img src="/pubgyu-blog/dsmt/assets/images/story/ie-content1.jpg" alt="">
                 </figure>
               </div>
             </div>
@@ -261,7 +261,7 @@
 								</strong>
                 </div>
                 <figure class="ie-content">
-                  <img src="assets/images/story/ie-content2.jpg" alt="">
+                  <img src="/pubgyu-blog/dsmt/assets/images/story/ie-content2.jpg" alt="">
                 </figure>
               </div>
             </div>
@@ -283,7 +283,7 @@
 								</strong>
                 </div>
                 <figure class="ie-content">
-                  <img src="assets/images/story/ie-content3.jpg" alt="">
+                  <img src="/pubgyu-blog/dsmt/assets/images/story/ie-content3.jpg" alt="">
                 </figure>
               </div>
             </div>
@@ -313,7 +313,7 @@
 								</strong>
                 </div>
                 <figure class="ie-content">
-                  <img src="assets/images/story/ie-content4.jpg" alt="">
+                  <img src="/pubgyu-blog/dsmt/assets/images/story/ie-content4.jpg" alt="">
                 </figure>
               </div>
               <span class="page-dimmed"></span>
@@ -544,20 +544,20 @@
                       <div class="fms" data-message="청년들이 다양한 지역에서 잘 살아가기 위해 필요한 것은 무엇일까요?" data-person="유명상 펠로우" data-linebreak="[3,6]" data-linebreak-mobile="[3,5,1]"></div>
                       <div class="fmessage-person"></div>
                       <figure>
-                        <img alt="" src="assets/images/story/fellow-img1-dim.png">
+                        <img alt="" src="/pubgyu-blog/dsmt/assets/images/story/fellow-img1-dim.png">
                       </figure>
                       <figure class="color">
-                        <img alt="" src="assets/images/story/fellow-img1.png">
+                        <img alt="" src="/pubgyu-blog/dsmt/assets/images/story/fellow-img1.png">
                       </figure>
                     </div>
                     <div class="fslide-slide">
                       <div class="fms" data-message="일회용 컵이 사라진 세상에서 우리가 누릴 수 있는 것은 무엇일까요?" data-person="정다운 펠로우" data-linebreak="[4,6]" data-linebreak-mobile="[4,5,1]"></div>
                       <div class="fmessage-person"></div>
                       <figure>
-                        <img alt="" src="assets/images/story/fellow-img2-dim.png">
+                        <img alt="" src="/pubgyu-blog/dsmt/assets/images/story/fellow-img2-dim.png">
                       </figure>
                       <figure class="color">
-                        <img alt="" src="assets/images/story/fellow-img2.png">
+                        <img alt="" src="/pubgyu-blog/dsmt/assets/images/story/fellow-img2.png">
                       </figure>
                     </div>
                     <div class="fslide-slide">
@@ -565,30 +565,30 @@
                       </div>
                       <div class="fmessage-person"></div>
                       <figure>
-                        <img alt="" src="assets/images/story/fellow-img3-dim.png">
+                        <img alt="" src="/pubgyu-blog/dsmt/assets/images/story/fellow-img3-dim.png">
                       </figure>
                       <figure class="color">
-                        <img alt="" src="assets/images/story/fellow-img3.png">
+                        <img alt="" src="/pubgyu-blog/dsmt/assets/images/story/fellow-img3.png">
                       </figure>
                     </div>
                     <div class="fslide-slide">
                       <div class="fms" data-message="우리 사회는 농인 청년과 어떤 이야기를 나눌 수 있을까요?" data-person="정정윤 펠로우" data-linebreak="[2,7]" data-linebreak-mobile="[2,4,3]"></div>
                       <div class="fmessage-person"></div>
                       <figure>
-                        <img alt="" src="assets/images/story/fellow-img4-dim.png">
+                        <img alt="" src="/pubgyu-blog/dsmt/assets/images/story/fellow-img4-dim.png">
                       </figure>
                       <figure class="color">
-                        <img alt="" src="assets/images/story/fellow-img4.png">
+                        <img alt="" src="/pubgyu-blog/dsmt/assets/images/story/fellow-img4.png">
                       </figure>
                     </div>
                     <div class="fslide-slide">
                       <div class="fms" data-message="휠체어를 타고도 마음껏 이동할 수 있다면 모두에게 편한 사회를 만들 수 있지 않을까요?" data-person="홍윤희 펠로우" data-linebreak="[6,7]" data-linebreak-mobile="[2,4,3,4]"></div>
                       <div class="fmessage-person"></div>
                       <figure>
-                        <img alt="" src="assets/images/story/fellow-img5-dim.png">
+                        <img alt="" src="/pubgyu-blog/dsmt/assets/images/story/fellow-img5-dim.png">
                       </figure>
                       <figure class="color">
-                        <img alt="" src="assets/images/story/fellow-img5.png">
+                        <img alt="" src="/pubgyu-blog/dsmt/assets/images/story/fellow-img5.png">
                       </figure>
                     </div>
                   </div>
@@ -774,18 +774,18 @@
                     </div>
                   </div>
                   <div class="voice-background" data-background='[
-									[ "assets/images/story/voice-A-1.mp4",
-										"assets/images/story/voice-A-2.mp4",  
-										"assets/images/story/voice-A-3.mp4" ],
-									[ "assets/images/story/voice-B-1.mp4",
-										"assets/images/story/voice-B-2.mp4", 
-										"assets/images/story/voice-B-3.mp4" ],
-									[ "assets/images/story/voice-C-1.mp4",
-										"assets/images/story/voice-C-2.mp4",  
-										"assets/images/story/voice-C-3.mp4" ],
-									[ "assets/images/story/voice-D-1.mp4",
-										"assets/images/story/voice-D-2.mp4",  
-										"assets/images/story/voice-D-3.mp4" ]
+									[ "/pubgyu-blog/dsmt/assets/images/story/voice-A-1.mp4",
+										"/pubgyu-blog/dsmt/assets/images/story/voice-A-2.mp4",  
+										"/pubgyu-blog/dsmt/assets/images/story/voice-A-3.mp4" ],
+									[ "/pubgyu-blog/dsmt/assets/images/story/voice-B-1.mp4",
+										"/pubgyu-blog/dsmt/assets/images/story/voice-B-2.mp4", 
+										"/pubgyu-blog/dsmt/assets/images/story/voice-B-3.mp4" ],
+									[ "/pubgyu-blog/dsmt/assets/images/story/voice-C-1.mp4",
+										"/pubgyu-blog/dsmt/assets/images/story/voice-C-2.mp4",  
+										"/pubgyu-blog/dsmt/assets/images/story/voice-C-3.mp4" ],
+									[ "/pubgyu-blog/dsmt/assets/images/story/voice-D-1.mp4",
+										"/pubgyu-blog/dsmt/assets/images/story/voice-D-2.mp4",  
+										"/pubgyu-blog/dsmt/assets/images/story/voice-D-3.mp4" ]
 									]' data-bg="-1">
                   </div>
                 </div>
@@ -943,16 +943,16 @@
             </div>
           </div>
         </footer>
-        <script src="assets/scripts/libs/lottie.min.js"></script>
-        <script src="assets/scripts/story/s-init.js"></script>
-        <script src="assets/scripts/libs/jquery.min.js"></script>
-        <script src="assets/scripts/libs/browser-detect.umd.js"></script>
-        <script src="assets/scripts/libs/gsap.min.js"></script>
-        <script src="assets/scripts/libs/CustomEase.min.js"></script>
-        <script src="assets/scripts/libs/ScrollToPlugin.min.js"></script>
-        <script src="assets/scripts/libs/stickyfill.min.js"></script>
-        <script src="assets/scripts/libs/intersection-observer.js"></script>
-        <script src="assets/scripts/common.js"></script>
+        <script src="/pubgyu-blog/dsmt/assets/scripts/libs/lottie.min.js"></script>
+        <script src="/pubgyu-blog/dsmt/assets/scripts/story/s-init.js"></script>
+        <script src="/pubgyu-blog/dsmt/assets/scripts/libs/jquery.min.js"></script>
+        <script src="/pubgyu-blog/dsmt/assets/scripts/libs/browser-detect.umd.js"></script>
+        <script src="/pubgyu-blog/dsmt/assets/scripts/libs/gsap.min.js"></script>
+        <script src="/pubgyu-blog/dsmt/assets/scripts/libs/CustomEase.min.js"></script>
+        <script src="/pubgyu-blog/dsmt/assets/scripts/libs/ScrollToPlugin.min.js"></script>
+        <script src="/pubgyu-blog/dsmt/assets/scripts/libs/stickyfill.min.js"></script>
+        <script src="/pubgyu-blog/dsmt/assets/scripts/libs/intersection-observer.js"></script>
+        <script src="/pubgyu-blog/dsmt/assets/scripts/common.js"></script>
       </div>
       <div class="mobile-page-all-height"></div>
     </div>
@@ -969,11 +969,11 @@
             것을 권장합니다.</p>
           <div>
             <dl>
-              <dd><img src="assets/images/story/icon_chrome.jpg" alt="Google Chrome"></dd>
+              <dd><img src="/pubgyu-blog/dsmt/assets/images/story/icon_chrome.jpg" alt="Google Chrome"></dd>
               <dt>Google Chrome</dt>
             </dl>
             <dl>
-              <dd><img src="assets/images/story/icon_edge.jpg" alt="Microsoft Edge"></dd>
+              <dd><img src="/pubgyu-blog/dsmt/assets/images/story/icon_edge.jpg" alt="Microsoft Edge"></dd>
               <dt>Microsoft Edge</dt>
             </dl>
           </div>
@@ -1010,9 +1010,9 @@
     </div>
   </body>
   <script src="https://polyfill.io/v3/polyfill.min.js"></script>
-  <script src="assets/scripts/libs/p5.min.js"></script>
-  <script src="assets/scripts/story/component.js"></script>
-  <script src="assets/scripts/story/s-lottie.js"></script>
-  <script src="assets/scripts/story/s-sinario.js"></script>
-  <script src="assets/scripts/story/s-p5.js"></script>
+  <script src="/pubgyu-blog/dsmt/assets/scripts/libs/p5.min.js"></script>
+  <script src="/pubgyu-blog/dsmt/assets/scripts/story/component.js"></script>
+  <script src="/pubgyu-blog/dsmt/assets/scripts/story/s-lottie.js"></script>
+  <script src="/pubgyu-blog/dsmt/assets/scripts/story/s-sinario.js"></script>
+  <script src="/pubgyu-blog/dsmt/assets/scripts/story/s-p5.js"></script>
 </html>
