--- a/dsmt/index.html
+++ b/dsmt/index.html
@@ -943,16 +943,16 @@
             </div>
           </div>
         </footer>
-        <script src="/assets/scripts/libs/lottie.min.js"></script>
-        <script src="/assets/scripts/story/s-init.js"></script>
-        <script src="/assets/scripts/libs/jquery.min.js"></script>
-        <script src="/assets/scripts/libs/browser-detect.umd.js"></script>
-        <script src="/assets/scripts/libs/gsap.min.js"></script>
-        <script src="/assets/scripts/libs/CustomEase.min.js"></script>
-        <script src="/assets/scripts/libs/ScrollToPlugin.min.js"></script>
-        <script src="/assets/scripts/libs/stickyfill.min.js"></script>
-        <script src="/assets/scripts/libs/intersection-observer.js"></script>
-        <script src="/assets/scripts/common.js"></script>
+        <script src="./assets/scripts/libs/lottie.min.js"></script>
+        <script src="./assets/scripts/story/s-init.js"></script>
+        <script src="./assets/scripts/libs/jquery.min.js"></script>
+        <script src="./assets/scripts/libs/browser-detect.umd.js"></script>
+        <script src="./assets/scripts/libs/gsap.min.js"></script>
+        <script src="./assets/scripts/libs/CustomEase.min.js"></script>
+        <script src="./assets/scripts/libs/ScrollToPlugin.min.js"></script>
+        <script src="./assets/scripts/libs/stickyfill.min.js"></script>
+        <script src="./assets/scripts/libs/intersection-observer.js"></script>
+        <script src="./assets/scripts/common.js"></script>
       </div>
       <div class="mobile-page-all-height"></div>
     </div>
