--- a/dsmt/index.html
+++ b/dsmt/index.html
@@ -5,17 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <meta name="format-detection" content="telephone=no, address=no, email=no" />
-    <link rel="shortcut icon" href="/assets/images/common/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/common/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="192x192" href="/assets/images/common/android-icon-192x192.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/common/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/common/favicon-16x16.png" />
+    <link rel="shortcut icon" href="./assets/images/common/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/images/common/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="./assets/images/common/android-icon-192x192.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/common/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/common/favicon-16x16.png" />
     <title>Kakao Impact</title>
-    <link rel="preload" href="/assets/fonts/SDGothicNeoaUniTTF-dRg.woff" as="font" type="font/woff" crossorigin="anonymous" />
-    <link rel="preload" href="/assets/fonts/SDGothicNeoaUniTTF-fSb.woff" as="font" type="font/woff" crossorigin="anonymous" />
-    <link rel="preload" href="/assets/fonts/SDGothicNeoaUniTTF-hEb.woff" as="font" type="font/woff" crossorigin="anonymous" />
-    <link rel="preload" href="/assets/fonts/Sequel100Wide-75.woff" as="font" type="font/woff" crossorigin="anonymous" />
-    <link rel="stylesheet" type="text/css" href="/assets/styles/style.css" />
+    <link rel="preload" href="./assets/fonts/SDGothicNeoaUniTTF-dRg.woff" as="font" type="font/woff" crossorigin="anonymous" />
+    <link rel="preload" href="./assets/fonts/SDGothicNeoaUniTTF-fSb.woff" as="font" type="font/woff" crossorigin="anonymous" />
+    <link rel="preload" href="./assets/fonts/SDGothicNeoaUniTTF-hEb.woff" as="font" type="font/woff" crossorigin="anonymous" />
+    <link rel="preload" href="./assets/fonts/Sequel100Wide-75.woff" as="font" type="font/woff" crossorigin="anonymous" />
+    <link rel="stylesheet" type="text/css" href="./assets/styles/style.css" />
     <link rel="stylesheet" href="./assets/styles/story.css" />
   </head>
   <body>
